wrap fixes

--- a/mso.css
+++ b/mso.css
@@ -54,6 +54,7 @@ body{
     justify-content: space-evenly;
 }
 .sector{
+    flex-shrink: 0;
 display: flex;
 align-items: center;
 flex-direction: column;
@@ -157,5 +158,6 @@ border-color: green;
     }
     .main-content{
         flex-direction:column;
+        flex-wrap: nowrap;
     }
 }
